@@ -3594,7 +3594,7 @@
   <property name="title" translatable="yes"></property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
-  <property name="modal">True</property>
+  <property name="modal">False</property>
   <property name="resizable">True</property>
   <property name="destroy_with_parent">False</property>
   <property name="show_fileops">True</property>
@@ -3604,6 +3604,8 @@
       <property name="visible">True</property>
       <property name="can_default">True</property>
       <property name="can_focus">True</property>
+      <property name="label">gtk-cancel</property>
+      <property name="use_stock">True</property>
       <property name="relief">GTK_RELIEF_NORMAL</property>
       <signal name="clicked" handler="destroy_passed_object" object="fileselection"/>
     </widget>
@@ -3665,7 +3667,7 @@
 	      <property name="label">gtk-ok</property>
 	      <property name="use_stock">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
-	      <property name="response_id">0</property>
+	      <property name="response_id">-5</property>
 	      <signal name="clicked" handler="on_select_spouse_clicked" object="spouseDialog"/>
 	    </widget>
 	  </child>
